--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <!-- bootstrap css file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- font awesome css -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- css file link -->
@@ -33,6 +34,9 @@
                 <div class="form-group">
                     <label for="name">Your Name</label>
                     <input id="namefield" type="text" placeholder="Enter Your Name" class="form-control">
+                    <small id="namevalid" class="form-text text-muted invalid-feedback">
+                        Your name must be 2-10 characters long and should not start with a number
+                      </small>
                 </div>
                 <div class="form-group">
                     <label for="name">Your Position</label>
@@ -41,10 +45,16 @@
                 <div class="form-group mt-3">
                     <label for="name">Contact Number</label>
                     <input id="contactfield" type="text" placeholder="Enter Your Number" class="form-control">
+                    <small id="namevalid" class="form-text text-muted invalid-feedback">
+                        Please enter  valid number
+                      </small>
                 </div>
                 <div class="form-group mt-2">
                     <label for="name">Enter Your Email</label>
                     <input id="emailfield" type="email" placeholder="Enter Your E-mail" class="form-control">
+                    <small id="namevalid" class="form-text text-muted invalid-feedback">
+                        Enter Your correct and valid email
+                      </small>
                 </div>
                 <div class="form-group mt-2">
                     <label for="name">Enter Your Adress</label>
